# 3DEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Geometry.cpp  README.md  Shader.cpp  glad.c
shaders/: vertex.shader
src/: Buffer.cpp  Buffer.h  main.cpp
